# silverscript

./: .gitignore
sil-debug-web/: Cargo.toml  package-lock.json  package.json  tsconfig.json
sil-debug-web/src/: main.rs
sil-debug-web/web/: app.js  index.html  styles.css
sil-debug-web/web/src/: app.ts
silverscript-lang/src/: ast.rs  compiler.rs  parser.rs  silverscript.pest
silverscript-lang/src/compiler/: debug_recording.rs
silverscript-lang/src/debug/: session.rs
silverscript-lang/tests/: ast_json_tests.rs  compiler_tests.rs  debug_session_tests.rs  examples_tests.rs  parser_tests.rs
silverscript-lang/tests/ast_json/: require_test.ast.json
silverscript-lang/tests/examples/: announcement.sil  covenant_escrow.sil  covenant_last_will.sil  covenant_mecenas.sil  hodl_vault.sil  mecenas.sil  mecenas_locktime.sil  token.sil  transfer_with_timeout.sil
