[package]
name = "sil-debug-web"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Kaspa developers"]
repository = ""
rust-version = "1.85.0"

[dependencies]
silverscript-lang = { path = "../silverscript-lang" }
kaspa-consensus-core = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "covpp-reset1" }
kaspa-txscript = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "covpp-reset1" }
blake2b_simd = "1.0.2"
rand = "0.8.5"
secp256k1 = { version = "0.29.0", features = ["global-context", "rand-std", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
pest = "2.7"
tiny_http = "0.12"

[workspace]
